--- a/readme
+++ b/readme
@@ -1,22 +1,21 @@
-# Web Scraping Project
+Web Scraping Project
 
-## Introduction
+Introduction
 
 This Node.js script is designed to scrape data from a specific website - [https://www.tanzapages.com](https://www.tanzapages.com) - with the provided parameters.
 
-## Usage
+Usage
 
-### 1. Installation
+1. Installation
 
 Make sure you have Node.js installed on your machine. Additionally, install the required libraries using the following command:
 
-```
-bash
+```bash
 npm install axios cheerio
 
 ```
 
-### 2. Script Configuration
+2. Script Configuration
 Open the script and modify the following parameters according to your requirements:
 
 url: The base URL of the website you want to scrape (e.g., https://www.tanzapages.com/location/Dar_Es_Salaam/{page}).
@@ -28,12 +27,10 @@ save_format: Defines how you want your data saved. Available options are 'csv' o
 ### 3. Run the Script
 Execute the script using the following command:
 
-```
-bash
+```bash
 node server.js
-
 ```
-### 4. Output
+4. Output
 The scraped data will be saved in either CSV or JSON format based on your specified preference.
 
 CSV: The data will be saved in a file named scraped_data.csv.
